# Dynamical_Systems_Networks

./: .gitignore  README.md  pyproject.toml
configs/: config.json  config_Kuramoto_ER.json  config_Kuramoto_Power_Law.json  config_double_well_configuration_model_PowerLaw_Alpha25.json  config_double_well_configuration_model_PowerLaw_Alpha35.json  config_double_well_configuration_model_PowerLaw_Alpha5.json
configs/Kuramoto/: config_Kuramoto_Bistable_Graphon.json  config_Kuramoto_ER.json  config_Kuramoto_Watts_Strogatz.json
configs/linear_response/: config_double_well_configuration_model_poisson_n10_000_critical.json
configs/phase_diagram/: config_double_well_configuration_model_PowerLaw_Alpha25.json  config_double_well_configuration_model_PowerLaw_Alpha35.json  config_double_well_configuration_model_PowerLaw_Alpha5.json  config_double_well_configuration_model_poisson.json
notebooks/: basic_data_analysis.ipynb  create_config.ipynb  phase_diagram_analysis.py  prototyping.ipynb  prototyping_data_analysis.ipynb  prototyping_simulations.ipynb  response_experiments_analysis.py  template_data_analysis.ipynb  template_kuramoto_simulation_run.ipynb
notebooks/examples_integration/: template_data_analysis.ipynb  template_kuramoto_simulation_run.ipynb
notebooks/prototyping/: prototyping_data_analysis.ipynb  prototyping_networks.ipynb  (+1 more)
params/: sweep_theta_Kuramoto_ER.tsv  sweep_theta_double_well_configuration_model.tsv  sweep_theta_double_well_configuration_model_PowerLaw_Alpha25.tsv  sweep_theta_double_well_configuration_model_PowerLaw_Alpha35.tsv  sweep_theta_double_well_configuration_model_PowerLaw_Alpha5.tsv
scripts/: aggregate_response_across_graphs.py  build_response_table.py  check_theta_criticality.py  claim_response_chunk.py  compute_correlation_functions.py  create_config.py  merge_response_aggregates.py  response_status.py  run_build_response_table.sh  run_bulk_parallel.py  run_bulk_stats.py  run_claim_response_chunk.sh  run_linear_response_unperturbed_experiments.sh  run_local_sweep.sh  run_merge_response_aggregates.sh  run_phase_diagram.sh  run_response.py  run_response_aggregate.sh  run_response_experiments.sh  run_response_parallel.py  run_simulation.py
(+161 files in other folders)
