[project]
name = "dyn-net"
version = "0.1.0"
description = ""
authors = [
    {name = "Niccolo Zagli",email = "niccozagli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14.1"

dependencies = [
    "numpy (>=2.0.0,<2.4.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "numba (>=0.61.2,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "dyn_net", from = "src" }]
