[project]
name = "dyn-net"
version = "0.1.0"
description = ""
authors = [
    {name = "Niccolo Zagli",email = "niccozagli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "numpy (>=1.24,<1.28)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "networkx (>=3.4,<3.6)",
    "scipy (>=1.10,<1.12)",
    "numba (>=0.61.2,<1.0.0)",
    "typer (>=0.19.2,<0.20.0)"
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
